methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:10: error: not found: value prendreBiscuit
prendreBiscuit()
^